--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
     <title>دخول - tagflat el 3hat</title>
     <link
@@ -8,6 +9,14 @@
       rel="stylesheet"
     />
     <style>
+      body {
+        background-color: rgb(24, 23, 23);
+        text-align: center;
+      }
+      img {
+        margin: 20px;
+        border: 2px white;
+      }
       body {
         margin: 0;
         font-family: "Cairo", sans-serif;
